--- a/RHO.ipynb
+++ b/RHO.ipynb
@@ -63,7 +63,7 @@
     "plt.plot(ts,xs3,'r', label ='x₀ = 4')\n",
     "\n",
     "#legend plotting\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left', frameon=False, borderaxespad=0.)\n",
     "\n",
     "#printing the plot\n",
     "plt.show\n",
